# gren

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
include/gren/: logger.hpp  matrix.hpp  mesh.hpp  shader.hpp  terrain.hpp  texture.h  vector.h  window.hpp
include/grn/: entity.h  input.h  logger.h  matrix.h  mesh.h  render.h  shader.h  texture.h  vector.h  window.h
res/shaders/: shader.frag  shader.vert
src/: input.cpp  main.cpp  matrix.cpp  shader.cpp  texture.cpp  window.cpp
